src/app/app/(glyph)/book/page.module.css
.wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.title {
  font-family: "DCC-Ash";
  font-size: 2rem;
  font-weight: bold;
}

.quests {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.lock {
  width: 32px;
  height: 32px;
  image-rendering: pixelated;
}

.quest {
  background-color: rgba(255, 255, 255, 0.7);
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0.5rem;
  padding: 1rem;
}

.questTitle {
  font-size: 1.5rem;
  font-weight: bold;
  font-family: "DCC-Ash";
}

.questContent {
  width: 90%;
  padding: 1rem;
}

.more {
  color: #000;
  font-weight: bold;
}

.finishedWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  
  min-height: 70vh;
  background-color: rgba(255, 255, 255, 0.8);
  border-radius: 1rem;
  margin-bottom: 2rem;
}

.finishedDesc {
  padding-top: 2rem;
  display: flex;
  flex-direction: column;
  
  gap: 1rem;
}

.finishedContent {
  margin: 3rem;
}

.finishedDescText {
}

.btnWrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  
  width: 100%;
  
  margin-top: 1rem;
}

.finishedButton {
  background-color: #000;
  color: #fff;
  font-weight: bold;
  padding: 1rem;
  border-radius: 1rem;
  cursor: pointer;
}

